# matrix

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  notify.rs  offer.rs  tariff_plan.rs  user_info.rs  user_news.rs
client/: codegen.ts  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.tsx  index.css  index.tsx
client/src/__generated__/: gql.ts  (+1 more)
migration/src/: lib.rs  m20240731_110230_create_user.rs  m20240807_135202_telegram_uniqu.rs  m20240809_100140_user_add_role.rs  m20240819_115128_create_notify.rs  m20240820_072759_create_newslatter.rs  m20240904_151724_add_notify_type.rs  m20241103_104246_user_info_create.rs  m20241103_182645_user_info_data_create.rs  m20250610_173639_tariff_plan_create.rs  m20250610_181858_user_tariff_plan_create.rs  m20250611_191338_offer_create.rs  m20250612_095148_payment_crete.rs  m20250612_100633_payment_tariff_plan_create.rs  m20250612_101751_alter_table_user_tariff_plan.rs  m20250612_110702_create_free_tariff_plan.rs  m20250702_135213_news.rs  m20250702_141344_user_news.rs  (+6 more)
server/: Cargo.toml  build.rs  diesel.toml
server/migrations/2024-07-01-121658_create/: up.sql
server/proto/: compute.proto
server/src/: get_user.rs  main.rs  models.rs  schema.rs
server/src/auth/: auth.rs  auth_gql.rs  auth_service.rs  mod.rs  web_app_data.rs
server/src/calculator/: calculator_gql.rs  calculator_gql_model.rs  calculator_repository.rs  calculator_service.rs  mod.rs
server/src/common/config/: config.rs
server/src/common/db_utils/: db_utils.rs
server/src/common/errors/: gql_error.rs  mod.rs
server/src/common/gql/: gql_schema.rs
server/src/common/guards/: auth_guard.rs  http_system_guard.rs  mod.rs  system_guard.rs
server/src/common/helpers/: ctx.rs  mod.rs  string.rs
server/src/common/s3/: public.rs
server/src/common/secret/: secret_service.rs
server/src/common/types/: mod.rs  structurs.rs  traits.rs
server/src/entity/: calculator.rs  mod.rs  news.rs  news_like.rs  newsletter.rs  notify.rs  offer.rs  offer_like.rs  payment.rs  prelude.rs  sea_orm_active_enums.rs  tariff_plan_payment.rs  user_calc_result.rs  user_info.rs  user_tariff_plan.rs  users.rs
server/src/news/: mod.rs  news_gql.rs  news_gql_model.rs  news_repository.rs  news_service.rs  uploader.rs
server/src/news_like/: mod.rs  news_like_gql.rs  news_like_gql_model.rs  news_like_repository.rs  news_like_service.rs
server/src/newsletter/: mod.rs  newsletter_gql.rs  newsletter_gql_model.rs  newsletter_repository.rs  newsletter_scheduler.rs  types.rs
server/src/notify/: mod.rs  notify_gql.rs  notify_gql_model.rs  notify_repository.rs  notify_sender.rs  notify_service.rs
server/src/offer/: mod.rs  offer_gql.rs  offer_gql_model.rs  offer_repository.rs  uploader.rs
server/src/offer_like/: mod.rs  offer_like_gql.rs  offer_like_gql_model.rs  offer_like_model.rs  offer_like_repository.rs  offer_like_service.rs
server/src/payment/: mod.rs  payment_repository.rs  tariff_plan_payment_repository.rs
server/src/tariff_plan/: mod.rs  tariff_plan_gql.rs  tariff_plan_gql_model.rs  tariff_plan_repository.rs  tariff_plan_service.rs
server/src/user/: mod.rs  repo.rs  types.rs  user_gql.rs  user_gql_model.rs  user_info_gql.rs  user_info_gql_model.rs  user_info_repository.rs  user_info_service.rs  user_news_gql.rs  user_news_gql_model.rs  user_news_repository.rs  user_news_service.rs  user_repository.rs  user_service.rs  user_tariff_plan_gql.rs  user_tariff_plan_gql_model.rs  user_tariff_plan_repository.rs  user_tariff_plan_service.rs
server/src/user/gql_models/: user_calc_result_gql_model.rs  user_gql_model.rs  user_info_gql_model.rs
server/src/user/repositoryes/: user_calc_result_repository.rs  user_info_repository.rs  user_tariff_plan_repository.rs
server/src/user/services/: user_calc_result_service.rs  user_info_service.rs  user_tariff_plan_service.rs
(+154 files in other folders)
