[package]
name = "matrix"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.7.2"
url = "2.2"
async-graphql = { version = "7.0.13", features = ["uuid", "chrono"] }
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
actix-web = { version = "4.11.0", default-features = false, features = [
  "macros",
] }
actix-files = "0.6.6"
actix = "0.13.0"
uuid = "1.8.0"
derive_more = "2.0.1"
rust_decimal = "1"
rust_decimal_macros = "1"
num-traits = "0.2"
chrono = "0.4.22"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
include_dir = "0.6"
mime_guess = "2.0.4"
dotenv = "0.15.0"
async-graphql-actix-web = "7.0.16"
rust-s3 = "0.35.1"
testcontainers = "0.14"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
sha2 = { version = "0.10", default-features = false }
hmac = "0.12"
hex = "0.4"
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "debug-print",
] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
migration = { path = "../migration" } # depends on your needs
jsonwebtoken = "9"
urlencoding = "2.1.3"
url-search-params = "12.0.0"
thiserror = "1.0.63"
cron = "0.12.1"
once_cell = "1.19.0"
actix-cors = "0.6"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11"
